# pods.ptp.object-search.igmm-point-process

./: CMakeLists.txt  README
src/: igmm_point_process.cpp  igmm_point_process.hpp  mcmc.cpp  mcmc.hpp  model.cpp  model.hpp  planner.hpp
test/: CMakeLists.txt  test-entropy.cpp  test-igmm-line-gaussian-poisson.cpp  test-igmm-mcmc.cpp  test-igmm-samples.cpp  test-negative-observation-likelihood-for-mean.cpp
test/unit-tests/: CMakeLists.txt  unit-test-main.cpp
